Some commands remade v2, NO START