@@ -95,7 +95,7 @@ public class Oplayer {
     public ProfileManager menu;
     private boolean hideScore = false; //для лобби-чтобы не конфликтовал показ онлайна и кастомные значения
 
-    public Location last_death=Bukkit.getWorlds().get(0).getSpawnLocation();
+    public Location last_death=Bukkit.getWorlds().getFirst().getSpawnLocation();
 
     public String chat_group=" ---- ";
     private String tabPreffix = "§7", beforeName = ChatLst.NIK_COLOR, tabSuffix="";
@@ -107,7 +107,7 @@ public class Oplayer {
     //служебные
     public SetupMode setup; //для билдеров
     public BukkitTask displayCube; //показ границы выделения
-    public BukkitTask spyTask;
+    public Location spyOrigin;
     public Gender gender = Gender.NEUTRAL;
     public String lastCommand; //последняя команда введёная билдером
     
@@ -151,7 +151,7 @@ public class Oplayer {
             if (nextAb==0) {
                 if (!delayActionbars.isEmpty()) {
                     nextAb = ACTION_BAR_INTERVAL;
-                    final String ab = delayActionbars.remove(0);
+                    final String ab = delayActionbars.removeFirst();
                     p.sendActionBar(Component.text(ab));
                 }
             }
@@ -161,7 +161,7 @@ public class Oplayer {
             nextTitle--;
             if (nextTitle==0) {
                 if (!delayTitles.isEmpty()) {
-                    final Title t = delayTitles.remove(0);
+                    final Title t = delayTitles.removeFirst();
                     p.showTitle(t);
                     final Title.Times tm = t.times();
                     nextTitle = tm==null ? 0 : tm.fadeIn().toSecondsPart()+tm.stay().toSecondsPart()+tm.fadeOut().toSecondsPart() + 1;
@@ -173,7 +173,7 @@ public class Oplayer {
             barTime--;
             if (barTime == 0) {
                 if (!delayBossBars.isEmpty()) {
-                    final DelayBossBar bb = delayBossBars.remove(0);
+                    final DelayBossBar bb = delayBossBars.removeFirst();
                     bb.apply(this, p);
                 } else {
                     p.hideBossBar(bossbar);
@@ -253,7 +253,7 @@ public class Oplayer {
     public void updTabListName (final Player p) {
         if (Config.tablist_name) {
             final String displayName = isGuest ? "§8(Гость) " + beforeName + getDataString(Data.FAMILY) : beforeName + nik;
-            p.playerListName(TCUtils.format(tabPreffix + displayName + tabSuffix));
+            p.playerListName(TCUtils.form(tabPreffix + displayName + tabSuffix));
         }
     }
     
@@ -657,7 +657,7 @@ public class Oplayer {
 
 
     public void updateGender() {
-        switch (TCUtils.stripColor(getDataString(Data.GENDER)).toLowerCase()) {
+        switch (TCUtils.strip(getDataString(Data.GENDER)).toLowerCase()) {
             case "девочка" -> gender = Gender.FEMALE;
             case "мальчик" -> gender = Gender.MALE;
             default -> gender = Gender.NEUTRAL;
